--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Tom Creuse | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="keywords" content="Tom Creuse, Portfolio, React.js, Web development">
+  <meta name="author" content="Tom Creuse">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Tom Creuse | Portfolio">
@@ -18,7 +20,7 @@
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://portfolio-teal-eight-98.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Tom Creuse | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
@@ -27,7 +29,7 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
+  <meta name="twitter:title" content="Tom Creuse | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
